# rust-grpc-service-axum-modular.archetype

./: .gitignore  README.md  archetype.rhai  archetype.yaml
.github/workflows/: release.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/: .justfile  Cargo.toml  README.md  Tiltfile
contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/: build.yaml  cut-tag.yaml  promote.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/local/: Dockerfile
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/prd/: Dockerfile
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_bin/: Cargo.toml  README.md
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_bin/src/: cli.rs  main.rs  settings.rs  traces.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_client/: Cargo.toml  README.md  build.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_client/src/: lib.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/: Cargo.toml  README.md  build.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/src/: conversion.rs  impl.rs  lib.rs  settings.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/tests/core/: lib.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/: impl.rs  page.rs  settings.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/entities/: {{ prefix_name }}.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/migrations/: baseline.rs  mod.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/tests/persistence/: lib.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_server/: Cargo.toml  README.md
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_server/src/: lib.rs  settings.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_server/tests/server/: lib.rs
contents/base/{{ prefix-name }}-{{ suffix-name }}/specs/self/: {{ prefix_name }}_{{ suffix_name }}.proto
contents/base/{{ prefix-name }}-{{ suffix-name }}/xtask/: Cargo.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/xtask/src/: main.rs
contents/persistence-common/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/: README.md
contents/persistence-common/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/: impl.rs  page.rs
contents/persistence-common/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/entities/: mod.rs  {{ prefix_name }}.rs
contents/persistence-common/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/migrations/: mod.rs
contents/persistence-common/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/tests/persistence/: lib.rs
contents/persistence-mysql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/: Cargo.toml
contents/persistence-mysql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/: lib.rs  settings.rs
contents/persistence-mysql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/migrations/: baseline.rs
contents/persistence-mysql/{{ prefix-name }}-{{ suffix-name }}/tilt/: database.Tiltfile
contents/persistence-postgresql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/: Cargo.toml  README.md
contents/persistence-postgresql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/: lib.rs
contents/persistence-postgresql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/src/entities/: mod.rs
contents/persistence-postgresql/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_persistence/tests/persistence/: lib.rs
contents/persistence-postgresql/{{ prefix-name }}-{{ suffix-name }}/tilt/: database.Tiltfile
