[package]
name = "xtask"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3", default-features = false, features = ["std", "suggestions", "color", "cargo" ] }

