[package]
name = "{{ prefix_name }}_{{ suffix_name }}_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "{{ prefix-name }}-{{ suffix-name }}"
path = "src/main.rs"

[dependencies]
{{ prefix_name }}_{{ suffix_name }}_server = { path = "../{{ prefix_name }}_{{ suffix_name }}_server" }
{{ prefix_name }}_{{ suffix_name }}_core = { path = "../{{ prefix_name }}_{{ suffix_name }}_core" }
{% if persistence != 'None' %}{{ prefix_name }}_{{ suffix_name }}_persistence = { path = "../{{ prefix_name }}_{{ suffix_name }}_persistence" }
{% endif %}

anyhow = "1.0"
atty = "0.2"
clap = { version = "3", features = ["cargo", "derive"] }
config = { version = "0.12", default-features = false, features = ["yaml"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["serde_derive"] }
serde_yaml = "0.8"
shellexpand = "2.1"
tokio = { version = "1.17.0", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "net",
  "signal",
] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "registry",
  "env-filter",
] }

